--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
