--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^5.0.0-rc.1",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.14",
